err/pyxer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyxer'...
Compiling './lib/python3.5/site-packages/pyxer/app.py'...
***   File "./lib/python3.5/site-packages/pyxer/app.py", line 113
    except exc.HTTPException, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxer/command.py'...
***   File "./lib/python3.5/site-packages/pyxer/command.py", line 59
    print """
Commands:
  init               Create a new project
  serve              Serves the project
  push               Upload project to GAE 
  push_empty         Upload empty project with version'0' to GAE
  update             Update local pyxer package
  install            Install or update local Python package 
  zipinstall         Install or update local Python ZIP package (slow on GAE)

Daemon commands (only paster):
  start              Start
  stop               Stop
  status             Status
  reload, restart    Restart
""".strip()
             
         
                                         
                                       
                                           
                                                                
                                               
                                                            
                                                                             

                              
                          
                         
                           
                            
  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxer/controller.py'...
***   File "./lib/python3.5/site-packages/pyxer/controller.py", line 110
    print "RENDER", result, value
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyxer/create.py'...
***   File "./lib/python3.5/site-packages/pyxer/create.py", line 165
    raise Error, "VirtualENV not found"
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxer/gae'...
Compiling './lib/python3.5/site-packages/pyxer/gae/__init__.py'...
***   File "./lib/python3.5/site-packages/pyxer/gae/__init__.py", line 57
    print ERROR
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyxer/paster'...
Compiling './lib/python3.5/site-packages/pyxer/paster/__init__.py'...
***   File "./lib/python3.5/site-packages/pyxer/paster/__init__.py", line 100
    print "Command:", cmd
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyxer/recaptcha'...
Compiling './lib/python3.5/site-packages/pyxer/routing.py'...
***   File "./lib/python3.5/site-packages/pyxer/routing.py", line 197
    except ImportError, msg:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxer/sling'...
Compiling './lib/python3.5/site-packages/pyxer/sling/sling.py'...
***   File "./lib/python3.5/site-packages/pyxer/sling/sling.py", line 96
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxer/template'...
Compiling './lib/python3.5/site-packages/pyxer/template/cssselect.py'...
***   File "./lib/python3.5/site-packages/pyxer/template/cssselect.py", line 972
    print path
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyxer/template/genshi'...
Listing './lib/python3.5/site-packages/pyxer/template/genshi/filters'...
Compiling './lib/python3.5/site-packages/pyxer/template/genshi/input.py'...
***   File "./lib/python3.5/site-packages/pyxer/template/genshi/input.py", line 170
    except expat.ExpatError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxer/template/templatestream.py'...
***   File "./lib/python3.5/site-packages/pyxer/template/templatestream.py", line 98
    print "%4d:" % (n + 1), self.code[n]
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxer/utils'...
Compiling './lib/python3.5/site-packages/pyxer/utils/__init__.py'...
***   File "./lib/python3.5/site-packages/pyxer/utils/__init__.py", line 68
    raise KeyError, full
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyxer/utils/jsonhelper.py'...
***   File "./lib/python3.5/site-packages/pyxer/utils/jsonhelper.py", line 74
    raise ReadException, "Nothing to read: '%s'" % self._generator.all()
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyxer-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
